--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ PORT=5000
 SESSION_SECRET=your-super-secret-session-key
 
 
-MONGO_URI=mongodb+srv://justinedelacruz7770:DjzTTF14xBRCVS17@cluster0.rvtnsy0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://justinedelacruz7770:btqdUW9WPm7ASJRC@cluster0.kqh51xs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
