--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# MONGO_URI=mongodb+srv://charlesb614:sgzBp73CQ8yECXYb@cluster0.rd4rscl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://charlesb614:sgzBp73CQ8yECXYb@cluster0.rd4rscl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 SESSION_SECRET=your-super-secret-session-key
 
 
-MONGO_URI=mongodb+srv://justinedelacruz7770:btqdUW9WPm7ASJRC@cluster0.kqh51xs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://justinedelacruz7770:btqdUW9WPm7ASJRC@cluster0.kqh51xs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
